--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "url": "https://github.com/rapharacing/media-query/issues"
   },
   "keywords": [
-    "rapha",
     "media",
     "query",
     "styled-components"
@@ -26,5 +25,19 @@
   "publishConfig": {
     "access": "public",
     "@rapharacing:registry": "https://registry.npmjs.org"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "react-dom": "^16.9.0",
+    "react": "^16.9.0",
+    "webpack-cli": "^3.3.6",
+    "webpack": "^4.39.1"
+  },
+  "scripts": {
+    "build": "webpack --mode production"
   }
 }
